button alignment fixed,background img issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ header {
 }
 
 .contact-container {
-  background: #6070ff url(/images/contact-form-bg.svg) no-repeat 100% 100%;
+  background: #6070ff url(../images/contact-form-bg.svg) no-repeat 100% 100%;
   height: max-content;
   width: 100%;
   border-top-left-radius: 80px;
@@ -363,6 +363,12 @@ header {
 
 .form-article img {
   margin: 30px 121px 8px 121px;
+}
+
+.form-article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact-form {
@@ -403,11 +409,14 @@ header {
   font-weight: 500;
   font-size: 17px;
   line-height: 36px;
+  background-color: white;
   color: #6070ff;
-  background-color: #fff;
   border-radius: 8px;
   width: 140px;
   height: 48px;
+  letter-spacing: 0.03em;
+  transition: all ease-in-out 0.2s;
+
 }
 
 .contact-form input::placeholder,
@@ -416,8 +425,9 @@ header {
 }
 
 .contact-form button:hover {
-  background-color: #a3a0f6;
-  color: #fff;
+  border: 1px solid #ebebff;
+  background: #6070ff;
+  color: white;
 }
 
 .contact-form button:active {
